# DepotDownloader-rs

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/depotdownloader/: Cargo.toml
crates/depotdownloader/src/: cli.rs  download.rs  errors.rs  main.rs
crates/steam/: Cargo.toml  build.rs
crates/steam-client/: Cargo.toml
crates/steam-client/src/: credentials.rs  download.rs  event.rs  lib.rs  manifest.rs
crates/steam-client/tests/: delta_download.rs  file_filter.rs
crates/steam-ffi/: Cargo.toml  README.md
crates/steam-ffi/src/: lib.rs
crates/steam/examples/: profile_hotpaths.rs
crates/steam/proto/: DO_NOT_EDIT
crates/steam/src/: enums.rs  error.rs  lib.rs
crates/steam/src/apps/: mod.rs
crates/steam/src/auth/: mod.rs
crates/steam/src/cdn/: lancache.rs  mod.rs  server.rs
crates/steam/src/client/: mod.rs  msg.rs  multi.rs
crates/steam/src/connection/: encryption.rs  framing.rs  mod.rs
crates/steam/src/content/: mod.rs
crates/steam/src/crypto/: mod.rs  rsa.rs
crates/steam/src/depot/: chunk.rs  manifest.rs  mod.rs
crates/steam/src/messages/: emsg.rs  header.rs  mod.rs
crates/steam/src/transport/: capture.rs  mod.rs  recording.rs  replay.rs  tcp.rs
crates/steam/src/types/: game_id.rs  key_value.rs  mod.rs  steam_id.rs
crates/steam/src/util/: checksum.rs  compression.rs
crates/steam/tests/: depot_chunk.rs  depot_manifest.rs  eresult.rs  key_value.rs  manifest_decrypt.rs  replay_handshake.rs  steam_id.rs
crates/steam/tests/captures/: depots_223350.json  depots_480.json  depots_570.json  depots_730.json  files_1874900_1874901.json  files_223350_223351.json  files_480_481.json  manifests_223350_223351.json  manifests_480_481.json
crates/steam/tests/snapshots/: depot_manifest__decrypted_manifest.snap  depot_manifest__encrypted_manifest.snap  key_value__all_value_types.snap  key_value__empty_section.snap
examples/python/: CMakeLists.txt  pyproject.toml  spacewar_demo.py
examples/python/src/: bindings.cpp
examples/python/tests/: test_spacewar.py
scripts/: bench-cs2-check.sh  bench-cs2-maps.sh  bench-large.sh  bench-spacewar.sh  bench.sh  check-cs2-regex.sh  check-cs2-sizes.sh  check-de-total.sh  check-depots.sh  sync-protos.sh  verify-equivalence.sh
