[workspace]
members = ["crates/steam", "crates/steam-client", "crates/depotdownloader"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Protobuf
prost = "0.13"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Compression (pure Rust backends)
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
lzma-rs = "0.3"

# Crypto (RustCrypto - all pure Rust)
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
rsa = "0.9"
hmac = "0.12"
sha1 = "0.10"
crc32fast = "1"
adler = "1"
getrandom = "0.3"

# Binary parsing / byte handling
winnow = "0.7"
bytes = "1"
byteorder = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# QR codes
qrcode = "0.14"

# Regex
regex = "1"

# Async runtime (binary only)
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Progress
indicatif = "0.17"

# Testing
insta = { version = "1", features = ["toml"] }
