[workspace]
members = ["crates/steam", "crates/steam-client", "crates/steam-ffi", "crates/depotdownloader"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Protobuf
prost = "0.14"

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# Compression (pure Rust backends)
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
zstd = "0.13"
lzma-rs = "0.3"

# Crypto (RustCrypto - all pure Rust)
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
ecb = "0.2"
rsa = "0.10.0-rc.17"
hmac = "0.13"
sha1 = "0.11"
crc32fast = "1"
adler = "1"
getrandom = "0.4"
rand = "0.10"

# Binary parsing / byte handling
winnow = "1.0"
bytes = "1"
byteorder = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# QR codes
qrcode = "0.14"

# Regex
regex = "1"

# Async runtime (binary only)
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Progress
indicatif = "0.18"

# Transport
async-trait = "0.1"
base64 = "0.22"

# Terminal
rpassword = "7.4"

# Time
jiff = "0.2"

# Testing
insta = { version = "1", features = ["toml"] }
