[package]
name = "depotdownloader"
version.workspace = true
edition.workspace = true

[dependencies]
steam = { path = "../steam", features = ["serde"] }
steam-client = { path = "../steam-client" }
tokio.workspace = true
clap.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
