[package]
name = "depotdownloader"
version.workspace = true
edition.workspace = true

[dependencies]
steam = { path = "../steam" }
steam-client = { path = "../steam-client" }
tokio.workspace = true
clap.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rsa.workspace = true
sha1.workspace = true
base64.workspace = true
