[package]
name = "steam-client"
version.workspace = true
edition.workspace = true

[dependencies]
steam = { path = "../steam" }
tokio.workspace = true
prost.workspace = true
zip.workspace = true
async-trait.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
